# blackbox-optimization-library

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
algorithms/: _template.md  cma-es.md  de.md  fd.md  pepg.md  pso.md  spsa.md
bbolib/: __init__.py  cli.py  metrics.py  plotting.py  runner.py
bbolib/algorithms/: __init__.py  base.py  cma_es.py  de.py  fd.py  pepg.py  pso.py  random_search.py  spsa.py
bbolib/benchmarks/: __init__.py  functions.py
bbolib/energy/: __init__.py  monitor.py
benchmarks/: README.md
results/: README.md
scripts/: measure_energy.py  run_full_benchmark.py  run_quick_demo.py
tests/: test_algorithms.py  test_benchmarks.py  test_metrics.py
