[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bbolib"
version = "0.1.0"
description = "Library for benchmarking energy efficiency, complexity, and convergence of black-box optimization algorithms"
authors = [{name = "Barishan Das", email = "barishan.das@femto-st.fr"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "cma>=3.3",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
bbo-run = "bbolib.cli:run"
bbo-compare = "bbolib.cli:compare"

[tool.setuptools.packages.find]
where = ["."]
include = ["bbolib*"]
